--- a/14 Design Pattern/1. Sliding Window.md
+++ b/14 Design Pattern/1. Sliding Window.md
@@ -1,2 +1,27 @@
 ## Sliding Window
 
+ long maximumSumSubarray(int K, vector<int> &Arr , int N){
+    
+        long long int i(0),j(0),sum(0),ma(INT_MIN);
+        
+        while(j<N)
+        {
+            
+            sum+=Arr[j];
+            
+            if(j-i+1<K)
+                j++;
+            
+            
+            else if(j-i+1==K)
+            {
+                ma=max(ma,sum);
+                
+                sum-=Arr[i];
+                
+                i++;
+                j++;
+            }
+        }
+        return ma;
+    }
