--- a/14 Design Pattern/1. Sliding Window.md
+++ b/14 Design Pattern/1. Sliding Window.md
@@ -1,7 +1,8 @@
 ## Sliding Window
 
- long maximumSumSubarray(int K, vector<int> &Arr , int N){
-    
+ 
+ long maximumSumSubarray(int K, vector<int> &Arr , int N)
+ {
         long long int i(0),j(0),sum(0),ma(INT_MIN);
         
         while(j<N)
